Atualizações: - Gravação de cartões importados por arquivo
